1/16/14 center log/linear switch
1/16/14 shrink units switch if it exceeds maximum width, to handle i18n
1/16/14 migrate ExpandCollapseBar to sun
1/16/14 generalize ExpandCollapseBar
1/16/14 add placeholder for LinearGraph
1/16/14 attach beaker controls to left edge of beaker so that i18n strings have room to grow
1/16/14 shrink 'Molecule count' feature slightly and reposition so that it doesn't overlap beaker tick labels
1/16/14 migrate OnOffSwitch and ABSwitch to sun
1/16/14 change look of ABSwitch labels based on which one is selected
1/16/14 generalize ABSwitch so that the labels are {Node} instead of {String}, and it handles enable/disable of the labels
1/16/14 change the cursor when interactive graph indicators are disabled
# 1.0.0-dev.4 1/15/14
1/15/14 push duplicate code into GraphIndicatorDragHandler
1/15/14 change the structure of PHModel, it was acting flakey when returning an object literal
1/15/14 move responsibility of creating 'custom' solute from Solution setters to LogarithmicGraph
1/15/14 remove unused polymorphism in Solution.getConcentration*
1/15/14 PHModel.pHToConcentrationOH calls pHToConcentrationH3O
1/15/14 PHModel: handle null pH cases, add doc
1/15/14 factor out all core computations into PHModel, reducing complexity of Solution
1/15/14 Solution: factor out pH calculations into static functions
1/15/14 GraphIndicator: pickable=false for nodes that don't need to be involved in interactivity
1/15/14 add invisible rectangle on top of graph indicator handle, so that space between handle and body isn't a dead zone
1/15/14 tweak shadow on graph indicators so that they appear to float
1/15/14 remove 'Node' suffix from GraphIndicator and subtypes
1/15/14 new screen icons from YY
1/15/14 constrain pH to valid range when dragging the graph indicators
1/15/14 make graph indicators look disabled (using opacity) when value is zero
1/15/14 GraphIndicatorNode: replace multiple options with isInteractive